footer제작  메인 디자인 수정

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -40,10 +40,10 @@ dd{
 }
 
 .sec_main_recipe .orange{
-  background-color: orange;
+  background-color: #F5ECCE;
   width: 100%;
-  height: 500px;
-  border: 1px solid black;
+  height: 600px;
+  border: 1px solid #ddd;
 }
 
 
