--- a/views/body.ejs
+++ b/views/body.ejs
@@ -73,16 +73,16 @@
 	    <div class="line_map">
 	      <ul class="menu_btn">
 	        <li>
-	          <a href="">맛</a>
+	          <a href=""><strong>맛</strong></a>
 	        </li>
 	        <li>
-	          <a href="">쉽게</a>
+	          <a href=""><strong>쉽게</strong></a>
 	        </li>
 	        <li>
-	          <a href="">검색</a>
+	          <a href=""><strong>검색</strong></a>
 	        </li>
 	        <li>
-	          <a href="/meetings">모임</a>
+	          <a href="/meetings"><strong>모임</strong></a>
 	        </li>
 	      </ul>
 	    </div>
