--- a/views/index.ejs
+++ b/views/index.ejs
@@ -134,8 +134,8 @@
           <dl class="inner">
             <dt>
             <h3>
-              음식은 맛이지!<br>
-              <strong>"맛으로 먹보"</strong>
+              간단한게 좋아!<br>
+              <strong>"따라해 먹보"</strong>
             </h3>
             <div calss="btn_area">
               <a class="btn_more"> 더보기 </a>
@@ -249,5 +249,6 @@
 
     </div>
     </div>
+    <% include ./footer.ejs %>
   </body>
 </html>
