--- a/views/meetings/new.ejs
+++ b/views/meetings/new.ejs
@@ -84,6 +84,6 @@
 		<input type="hidden" id="latlng" name="latlng">
 		<input type="submit" value="완료">
 	</form>
-
+<% include ./footer.ejs %>
 </body>
 </html>
