--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -136,7 +136,7 @@ legend{
 }
 
 .bar_gnb {
-    background-color: #E6E6E6;
+    background-color: #FAFAFA;
     border-bottom: 1px solid #d1d3d4;
     clear: both;
     padding: 10px 0 0;
@@ -162,14 +162,15 @@ legend{
 .line_map li {
   float: left;
   letter-spacing: -0.01em;
-
+  font-family: NST;
 }
 
 .line_map li a{
-  width: 160px;
-  height: 50px;
+  width: 180px;
   border-left: 1px solid gray;
   display: inline-block;
-  padding: 10px 0 0;
-  margin-top: 0px;
+  padding: 10px 0  10px 0 ;
+  margin-top: 5px;
+  font-size: ;
+  font-family: 'NST;
 }
