--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,6 +5,7 @@
  <link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
  <link rel="stylesheet" type="text/css" href="/stylesheets/login.css">
  <link rel="stylesheet" type="text/css" href="/stylesheets/join.css">
+ <link rel="stylesheet" type="text/css" href="/stylesheets/footer.css">
  <script src="https://use.fontawesome.com/3268659a8a.js"></script>
  <style type="text/css">
     span.err_msg{
