--- a/views/posts/list.ejs
+++ b/views/posts/list.ejs
@@ -27,11 +27,11 @@
                             </a>
                             <span class="difficulty">
                       난이도
-                      <strong>3</strong>
+                      <strong><%=list[i].diff %></strong>
                     </span>
                             <span class="flavor">
                       맛
-                      <strong>3</strong>
+                      <strong><%=list[i].taste %></strong>
                     </span>
                             <span class="author">
                       <a herf="">
