메인페이지 레시피썸네일 db연결

--- a/views/body.ejs
+++ b/views/body.ejs
@@ -73,10 +73,10 @@
 	    <div class="line_map">
 	      <ul class="menu_btn">
 	        <li>
-	          <a href=""><strong>맛</strong></a>
+	          <a href="/posts/search/taste"><strong>맛</strong></a>
 	        </li>
 	        <li>
-	          <a href=""><strong>쉽게</strong></a>
+	          <a href="/posts/search/diff"><strong>쉽게</strong></a>
 	        </li>
 	        <li>
 	          <a href=""><strong>검색</strong></a>
