--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -38,6 +38,6 @@
           </dl>
         </fieldset>
       </div>
-    <% include ./footer.ejs %>
+    <% include ../footer.ejs %>
   </body>
 </html>
