--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -132,13 +132,13 @@
                                         <h3>맛 평가</h3>
                                         <ul class="lst_mate" id="recipe">
                                             <li class="recipe-info">
-                                                <input type="text" class="lft" name="taste" placeholder="1.0~5.0 사이의 숫자를 입력해주세요">
+                                                <input type="number" step="0.1" min="1" max="5" class="lft" name="taste" placeholder="1.0~5.0 사이의 숫자를 입력해주세요">
                                             </li>
                                         </ul>
                                         <h3>난이도 평가</h3>
                                         <ul class="lst_mate" id="recipe">
                                             <li class="recipe-info">
-                                                <input type="text" class="lft" name="diff" placeholder="1.0~5.0 사이의 숫자를 입력해주세요">
+                                                <input type="number" step="0.1" min="1" max="5" class="lft" name="diff" placeholder="1.0~5.0 사이의 숫자를 입력해주세요">
                                             </li>
                                         </ul>
                                     </div>
@@ -155,6 +155,6 @@
             </section>
         </div>
     </div>
-<% include ./footer.ejs %>
+<% include ../footer.ejs %>
 </body>
 </html>
