--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -22,6 +22,6 @@
           <button type="submit">확인</button><span class='err_msg'><%=err_db%></span><br>
       </div>
     </form>
-    <% include ./footer.ejs %>
+    <% include ../footer.ejs %>
   </body>
 </html>
