--- a/views/posts/list.ejs
+++ b/views/posts/list.ejs
@@ -54,11 +54,15 @@
                         
                     </ol>
                     <div class="paging">
+                        <a href=""><i class="fa fa-angle-double-left" aria-hidden="true"></i></a>
+                        <a href=""><i class="fa fa-angle-left" aria-hidden="true"></i></a>
                         <a class="currnet" href="">1</a>
                         <a rel="next" href="">2</a>
                         <a href="">3</a>
                         <a href="">4</a>
                         <a href="">5</a>
+                        <a href=""><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                        <a href=""><i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
                     </div>
                 </dd>
             </dl>
