--- a/public/stylesheets/post_show.css
+++ b/public/stylesheets/post_show.css
@@ -45,14 +45,12 @@
 .post_show_recipe img{
     width: 600px;
     height: 600px;
-    padding-top: 50px;
-    margin-bottom: 20px;
-
 }
 
 .post_show_recipe span{
     font-size: 20px;
-    padding: 20px;
+    padding: 20px 20px 50px 20px;
+    display: block;
 }
 
 .title{
