--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -21,6 +21,9 @@
     <div class="info_content">
       <div class="inner">
         <h2>마이레시피</h2>
+          <div calss="btn_area">
+              <a class="btn_more" href="/posts/search/taste"> 더보기 </a>
+          </div>
         <ol class="main_recipe">
           <li>
             <a class="recipe tumb">
@@ -71,6 +74,57 @@
             </p>
           </li>
         </ol>
+          </div>
+        <div class="my_meeting">
+            <div class="inner">
+              <h2>내가 등록한 모임</h2>
+              <div calss="btn_area">
+                  <a class="btn_more" href="/posts/search/taste"> 더보기 </a>
+              </div>
+              <ol class="main_recipe">
+                  <li>
+                      <a class="recipe tumb">
+                          <img src="img/음식1.jpg">
+                      </a>
+                      <span class="author">
+                          <a herf="">
+                            <img src="img/회원1.jpg">
+                          </a>
+                          <strong>
+                            <a>아이디</a>
+                          </strong>
+                        </span>
+                      <p>
+                          <a class="call_recipe"> 레시피 제목 </a>
+                      </p>
+                  </li>
+                  <li>
+                      <a class="recipe tumb">
+                          <img src="img/음식2.jpg">
+                      </a>
+                      <span class="difficulty">
+                          난이도
+                          <strong>3</strong>
+                        </span>
+                      <span class="flavor">
+                          맛
+                          <strong>3</strong>
+                        </span>
+                      <span class="author">
+                          <a herf="">
+                            <img src="img/회원2.jpg">
+                          </a>
+                          <strong>
+                            <a>아이디</a>
+                          </strong>
+                        </span>
+                      <p>
+                          <a class="call_recipe"> 레시피 제목 </a>
+                      </p>
+                  </li>
+              </ol>
+                </div>
+          </div>
       </div>
     </div>
 
