--- a/views/posts/list.ejs
+++ b/views/posts/list.ejs
@@ -53,16 +53,26 @@
 
                         
                     </ol>
+                    <% var start_point=Math.floor(now_page/5)*5; %>
+                    <% var last_point=Math.floor(total_page/5)*5+1; %>
+                    <% var before_point=Math.floor(now_page/5)*5-4; %>
+                    <% var after_point=Math.floor(now_page/5)*5+6; %>
+                    
                     <div class="paging">
-                        <a href=""><i class="fa fa-angle-double-left" aria-hidden="true"></i></a>
+                        <% if(total_page>4) { %>
+                        <a href="/posts/search/<%=type%>?value=<%=key%>&page=1"><i class="fa fa-angle-double-left" aria-hidden="true"></i></a>
+                        <a href="/posts/search/<%=type%>?value=<%=key%>&page=<%=before_point%>"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+                        <a href="/posts/search/<%=type%>?value=<%=key%>&page=<%=i+1%>"><i class="fa fa-angle-double-left" aria-hidden="true"></i></a>
                         <a href=""><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-                        <a class="currnet" href="">1</a>
-                        <a rel="next" href="">2</a>
-                        <a href="">3</a>
-                        <a href="">4</a>
-                        <a href="">5</a>
-                        <a href=""><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-                        <a href=""><i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+                        <% } %>
+                        <% for(i=start_point;i<total_page+1;i++){ %>
+                        <a href="/posts/search/<%=type%>?value=<%=key%>&page=<%=i+1%>"><%=i+1%></a>
+                        <% if(i==start_point+4) break; %>
+                        <% } %>
+                        <% if(total_page>4) { %>
+                        <a href="/posts/search/<%=type%>?value=<%=key%>&page=<%=after_point%>"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                        <a href="/posts/search/<%=type%>?value=<%=key%>&page=<%=last_point%>"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+                        <% } %>
                     </div>
                 </dd>
             </dl>
