--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -1,25 +1,74 @@
+<!doctype html>
 <html>
   <head>
     <% include ../header.ejs %>
     <link rel="stylesheet" type="text/css" href="/stylesheets/edit.css">
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="http://malsup.github.com/jquery.form.js"></script> 
+    <script>
+      $(document).ready(function(){
+            $('#user_edit').ajaxForm({
+              dataType:'json',
+              beforeSubmit:function(){
+                console.log('여기');
+                var name=$('.name').val();
+                var pw=$('.password').val();
+                var pw_confirm=$('.password_confirm').val();
+
+                $('#err_id').text("");
+                $('#err_name').text("");
+                $('#err_pw').text("");
+                $('#err_pw_confirm').text("");
+
+                if(!name){
+                  $('#err_id').text("이름을 입력해주세요");
+                  return false;
+                }
+                else if(pw && !pw_confirm){
+                  $('#err_pw_confirm').text("비밀번호를 한번 더 입력해주세요");
+                  return false;
+                }
+                else if(pw && pw!=pw_confirm){
+                  $('#err_pw').text("비밀번호가 다릅니다");
+                  $('.password').val(null);
+                  $('.password_confirm').val(null);
+                  return false;
+                }
+                else return true;
+              },
+              success:function(result){
+                if(result['err']==0){
+                  var path=result['url'];
+                  location.href=path;
+                }
+                else if(result['err']==1){
+                  $('#err_name').text("중복된 이름입니다");
+                }
+              }
+            });
+
+      });
+
+      
+    </script>
   </head>
   <body>
     <% include ../body.ejs %>
     <br><br><br><br><br><br><br><br>
     <h1>회원정보수정</h1>
-    <form id="user_edit" action="/users/<%=session.id%>?_method=put" method="post" enctype="multipart/form-data">
+    <form class="user_edit" id="user_edit" action="/users/<%=session.id%>?_method=put" method="post" enctype="multipart/form-data">
       <div class="content">
-          <label>이메일</label><span class='err_msg'><%=err_id%></span><br>
+          <label>이메일</label><span class='err_msg' id='err_id'></span><br>
         <input type="text" class="email" name="email" value="<%=session.email%>" disabled><br>
-        <label>이름</label><span class='err_msg'><%=err_name%></span><br>
+        <label>이름</label><span class='err_msg' id='err_name'></span><br>
         <input type="text" class="name" name="name" value="<%=session.name%>"><br>
-          <label>비밀번호 변경</label><span class='err_msg'><%=err_pw%></span><br>
-        <input type="text" class="password" name="password" value=""><br>
-        <label>비밀번호 확인</label><span class='err_msg'><%=err_pw_confirm%></span><br>
-        <input type="text" class="password_confirm" name="password_confirm" value=""><br>
+          <label>비밀번호 변경</label><span class='err_msg' id='err_pw'></span><br>
+        <input type="text" class="password" name="password"><br>
+        <label>비밀번호 확인</label><span class='err_msg' id='err_pw_confirm'></span><br>
+        <input type="text" class="password_confirm" name="password_confirm"><br>
         <label>프로필사진 변경</label><br>
         <input type="file" class="rgt upload-hidden" name="userPhoto"><br><br>
-          <button type="submit">확인</button><span class='err_msg'><%=err_db%></span><br>
+        <button type="submit">확인</button><br>
       </div>
     </form>
     <% include ../footer.ejs %>
