--- a/views/meetings/new.ejs
+++ b/views/meetings/new.ejs
@@ -49,6 +49,7 @@
 </head>
 <body>
 <% include ../body.ejs %>
+	<div =ca
 	<br><br><br><br>
 	<h1>모임 만들기</h1>
 	<form id="meeting_form" action="/meetings/new" method="post" enctype="multipart/form-data">
